[metadata]
name=transformers_phrase_limits
version=transformers_phrase_limits

[files]
packages =
    transformers_phrase_limits

[tool:pytest]
pythonpath = transformers_phrase_limits

[flake8]
ignore = N801, E203, E266, E501, W503, F812, E741, N803, N802, N806
exclude = .git,__pycache__,docs/,old,build,dist

[options]
packages = find:
requirements= find: